--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 rust-version = "1.65"
 
 [dependencies]
-tauri = { version = "2.0.0-alpha", features = ["internal-clipboard-all"] }
+tauri = { version = "2.5.1" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
